Notification Z-Index Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1472,12 +1472,12 @@ select {
   height: auto;
   /*margin-left: -125px;*/
   margin: auto;
-  background-color: #00bf6c;
+  background-color: #00c88f;
   color: #fff;
   text-align: center;
   border-radius: 2px;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   left: 0;
   right: 0;
   bottom: 0;
@@ -1487,8 +1487,9 @@ select {
 }
 
 /* Notification Link Style Color */
-#notifiaction a{
-  color: #fff !important;
+#notifiaction> a{
+    color: #fff !important;
+    font-weight: bold;
 }
 /* Show the notification when clicking on a button (class added with JavaScript) */
 #notification.show {
